# gherkin-sqlMesh

./: CLAUDE.md  README.md  pyproject.toml
docs/: EXECUTION_PLAN.md  KICKOFF.md
examples/: orders.feature  payments.feature
src/gherkin_sqlmesh/: __init__.py  audit_emitter.py  classifier.py  cli.py  model_patcher.py  parser.py  sql_validator.py  test_emitter.py
tests/: test_audit_emitter.py  test_classifier.py  test_cli.py  test_model_patcher.py  test_parser.py  test_sql_validation.py  test_test_emitter.py
tests/fixtures/expected/: test_stg_orders_orders_are_enriched_with_customer_names.yaml  test_stg_payments_amount_converts.yaml
tests/fixtures/features/: bad_steps.feature  data_table.feature  empty.feature  one_empty_scenario.feature  orders_with_customers.feature  payments.feature  simple_steps.feature
