[project]
name = "gherkin-sqlmesh"
version = "0.1.0"
description = "Compile Gherkin feature files to native SQLMesh tests and audits"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anil Sharma", email = "anil.sharma@truecaller.com" }]

dependencies = [
    "gherkin-official>=29.0.0",
    "sqlglot>=25.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "types-pyyaml",
]

[project.scripts]
gherkin-sqlmesh = "gherkin_sqlmesh.cli:main"
gs = "gherkin_sqlmesh.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
